--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -7,7 +7,6 @@ body {
   @apply bg-black;
 }
 
-
 /* width */
 ::-webkit-scrollbar {
   width: 7px;
@@ -20,7 +19,7 @@ body {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #F5095F;
+  background: #f5095f;
 }
 
 /* Handle on hover */
